@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                WebService-YQL
-version:             0.02
+version:             0.03
 abstract:            Simple interface for Yahoo Query Language
 license:             ~
 author:              
@@ -8,8 +8,10 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
-    JSON::Any:                     
+    JSON::Any:                     0
+    List::MoreUtils:               0
     Test::Simple:                  0.44
+    URI:                           0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
